Fixed Credentials login

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -16,7 +16,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;800&display=swap" rel="stylesheet">
-
+    
+    <script>
+        console.log( <%= isWrongCredentials %> );
+    </script>
 
 </head>
 
@@ -36,7 +39,8 @@
     </div>
     <!-- End Header -->
     <!-- Start landing-->
-
+    
+    
     <div class="register">
         <div class="dots dotss-up"></div>
         <div class="dots dotss-down"></div>
