--- a/views/registerp.ejs
+++ b/views/registerp.ejs
@@ -183,7 +183,18 @@
                     <small>&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;Error message</small>
                 </div>
                 <div class="form-control ">
-                    <input id="type" name="type" type="text" value="patient" disabled="true" style="display: none;">
+                    <label for="experience"><b> Experience&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
+                    <input id="experience" name="experience" type="text" placeholder=" &nbsp;Enter your experience level">
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                </div>
+                <div class="form-control " style="display: none;">
+                    <input id="type" name="type" type="text" value="patient" >
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                </div>
+                <div class="form-control " style="display: none;">
+                    <input id="rateAmount" name="rateAmount" type="number" value="0" >
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                 </div>
