--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1229,3 +1229,59 @@ column
     animation: moving-arrow 0.6s linear infinite;
     }
   /* End volunteers */
+
+  /* Start schedule */
+.schedule {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    }
+.schedule .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+    }
+.schedule .box {
+    box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+    background-color: white;
+    border-radius: 6px;
+    overflow: hidden;
+    transition: transform var(--main-transition), box-shadow var(--main-transition);
+    }
+.schedule .box:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+    }
+.schedule .box img {
+    width: 100%;
+    max-width: 100%;
+    }
+.schedule .box .content {
+    padding: 20px;
+    }
+.schedule .box .content h3 {
+    margin: 0;
+    }
+.schedule .box .content p {
+    margin: 10px 0 0;
+    line-height: 1.5;
+    color: #777;
+    }
+.schedule .box .info {
+    padding: 20px;
+    border-top: 1px solid #e6e6e7;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+.schedule .box .info a {
+    color: var(--main-color);
+    font-weight: bold;
+    }
+.schedule .box .info i {
+    color: var(--main-color);
+    }
+.schedule .box:hover .info i {
+    animation: moving-arrow 0.6s linear infinite;
+    }
+  /* End schedule */
