Fetching related schedule

--- a/views/patienthome.ejs
+++ b/views/patienthome.ejs
@@ -98,7 +98,7 @@
                         </p>
                     </div>
                     <div class="info">
-                        <a href="payment.html">Book</a>
+                        schedules<a href="/user/schedules?id=<%=daycares[i].id%>">Book</a>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         </p>
                     </div>
                     <div class="info">
-                        <a href="payment.html">Book</a>
+                        schedules<a href="/user/schedules?id=<%=caregivers[i].id%>">Book</a>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         </p>
                     </div>
                     <div class="info">
-                        <a href="payment.html">Book</a>
+                        schedules<a href="/user/schedules?id=<%=volunteers[i].id%>">Book</a>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </div>
