--- a/views/userschedule.ejs
+++ b/views/userschedule.ejs
@@ -30,18 +30,21 @@
             
             <% } else { %>
                 <% for(let i=0; i < user.schedule.length; i++) { %>
-                <div class="box">
-                    <img src="" alt="" />
-                    <div class="content">
-                        <h3>Day <%=user.schedule[i].day%></h3>
-                        <p>From <%=user.schedule[i].hourFrom%> To <%=user.schedule[i].hourTo%><br></p>
-                    </div>
-    
-                    <div class="info">
-                        <a href="payment.html">Book</a>
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                    </div>
-                </div>
+                
+                    <%if (!user.schedule[i].isBooked) {%>
+                        <div class="box">
+                            <img src="" alt="" />
+                            <div class="content">
+                                <h3>Day <%=user.schedule[i].day%></h3>
+                                <p>From <%=user.schedule[i].hourFrom%> To <%=user.schedule[i].hourTo%><br></p>
+                            </div>
+            
+                            <div class="info">
+                                <a href="/book/schedule?id=<%=user.schedule[i].id%>">Book</a>
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </div>
+                    <% } %>
                 <% } %>
             <% } %>
 
