--- a/views/caregiverschedule.ejs
+++ b/views/caregiverschedule.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,53 +9,48 @@
     <link rel="stylesheet" href="/css/payment.css">
 
 </head>
+
 <body>
 
-<div class="container">
+    <div class="container">
 
-    <form action="">
+        <form id="form" class="form" action="http://localhost:3000/api/schedule" method="post">
 
-        <div class="row">
+            <div class="row">
 
-            
 
-            <div class="col">
 
-                <h3 class="title"><i class="fa-regular fa-calendar-check"></i>Schedule</h3>
+                <div class="col">
 
-                
-                <div class="flex">
-                    <div class="inputBox">
-                        <span>Available day from :</span>
-                        <input type="date" >
+                    <h3 class="title"><i class="fa-regular fa-calendar-check"></i>Schedule</h3>
+
+
+                    <div class="flex">
+                        <div class="inputBox">
+                            <span>Available day from :</span>
+                            <input type="date" name="dayFrom">
+                        </div>
+                        <div class="inputBox">
+                            <span>To :</span>
+                            <input type="date" name="dayTo">
+                        </div>
+                        <div style="display: none;">
+                            <input name="userId" type="number" value="<%=user.id%>" >
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
+                        </div>
                     </div>
-                    <div class="inputBox">
-                        <span>To :</span>
-                        <input type="date" >
-                    </div>
+
                 </div>
-                <div class="flex">
-                    <div class="inputBox">
-                        <span>From :</span>
-                        <input type="time" >
-                    </div>
-                    <div class="inputBox">
-                        <span>To :</span>
-                        <input type="time" >
-                    </div>
-                </div>
-
-                
 
             </div>
-    
-        </div>
 
-        <input type="submit" value="Add schedule" class="submit-btn">
+            <input type="submit" value="Add schedule" class="submit-btn">
 
-    </form>
+        </form>
 
-</div>    
-    
+    </div>
+
 </body>
+
 </html>
