--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -51,7 +51,7 @@
                     </div>
                     <!-- End Megamenu -->
 
-                <li><a href="contact us.html" target="_blank"><i class="fa-solid fa-arrow-right-from-bracket"></i>&nbsp;
+                <li><a href="/signout" ><i class="fa-solid fa-arrow-right-from-bracket"></i>&nbsp;
                         Log out</a></li>
             </ul>
         </div>
