--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -96,7 +96,7 @@
                                 <br>Day To: <%= user.schedule[i].dayTo%>
                             </div>
                             <div class="info">
-                                <br> <a href="">Delete</a>
+                                <br> <a href="/delete/schedule?id=<%=user.schedule[i].id%>">Delete</a>
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </div>
                         </div> 
@@ -109,7 +109,7 @@
                                 <br>To: <%= user.schedule[i].hourTo%>
                             </div>
                             <div class="info">
-                                <br> <a href="">Delete</a>
+                                <br> <a href="/delete/schedule?id=<%=user.schedule[i].id%>">Delete</a>
                                 <i class="fas fa-long-arrow-alt-right"></i>
                             </div>
                         </div> 
