--- a/views/userschedule.ejs
+++ b/views/userschedule.ejs
@@ -41,7 +41,7 @@
                                 </div>
                 
                                 <div class="info">
-                                    <a href="/book/schedule?id=<%=user.schedule[i].id%>">Book</a>
+                                    <a href="/book/schedule/pay?id=<%=user.schedule[i].id%>">Book</a>
                                     <i class="fas fa-long-arrow-alt-right"></i>
                                 </div>
                             </div>
@@ -52,11 +52,17 @@
                                     <h3>Day <%=user.schedule[i].day%></h3>
                                     <p>From <%=user.schedule[i].hourFrom%> To <%=user.schedule[i].hourTo%><br></p>
                                 </div>
-                
-                                <div class="info">
-                                    <a href="/book/schedule?id=<%=user.schedule[i].id%>">Book</a>
-                                    <i class="fas fa-long-arrow-alt-right"></i>
-                                </div>
+                                <%if (user.type === 'volunteer') {%> 
+                                    <div class="info">
+                                        <a href="/book/schedule?id=<%=user.schedule[i].id%>">Book</a>
+                                        <i class="fas fa-long-arrow-alt-right"></i>
+                                    </div>
+                                <%} else {%> 
+                                    <div class="info">
+                                        <a href="/book/schedule/pay?id=<%=user.schedule[i].id%>">Book</a>
+                                        <i class="fas fa-long-arrow-alt-right"></i>
+                                    </div>
+                                <%}%>
                             </div>
                         <%}%>
                     <% } %>
