Get user bookings

--- a/views/patienthome.ejs
+++ b/views/patienthome.ejs
@@ -24,6 +24,7 @@
         <div class="container">
             <a href="#" class="logo"><img src="/imgs/logoo.png"> Warm Hands</a>
             <ul class="main-nav">
+                <li><a> Hi <%= user.firstName %></a></li>
                 <li><a href="#daycare"> Day care</a></li>
                 <li><a href="#caregivers"> Care givers</a></li>
                 <li><a href="#volunteers"> Volunteers</a></li>
