--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -24,8 +24,8 @@
         <div class="container">
             <a href="#" class="logo"><img src="/imgs/logoo.png"> Warm Hands</a>
             <ul class="main-nav">
-                <li><a> Hi <%= user.firstName %></a></li>
-                <li><a href="#schedule"> Schedule</a></li>
+                
+                <li><a href="/user/bookings">My Bookings</a></li>
                 <li>
                     <a href="#">Warm hands</a>
                     <!-- Start Megamenu -->
