--- a/views/servicebooking.ejs
+++ b/views/servicebooking.ejs
@@ -44,7 +44,7 @@
                             <h3>Name: <%=bookings[i].patient.firstName%> <%=bookings[i].patient.lastName%></h3>
                             <p>Phone number: <%=bookings[i].patient.phoneNumber%>
                             <br>Gender: <%=bookings[i].patient.gender%>
-                            <br>Illness case: 
+                            <br>Illness case: <%=bookings[i].patient.illnessCase%>
                             <%if (user.type === 'caregiver') {%> 
                                 <br> From: <%=bookings[i].schedule.dayFrom%>
                                 <br> To:   <%=bookings[i].schedule.dayTo%>
