--- a/views/patienthome.ejs
+++ b/views/patienthome.ejs
@@ -25,6 +25,7 @@
             <a href="#" class="logo"><img src="/imgs/logoo.png"> Warm Hands</a>
             <ul class="main-nav">
                 <li><a> Hi <%= user.firstName %></a></li>
+                <li><a href="/patient/bookings">Bookings</a></li>
                 <li><a href="#daycare"> Day care</a></li>
                 <li><a href="#caregivers"> Care givers</a></li>
                 <li><a href="#volunteers"> Volunteers</a></li>
