--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css"/>
+    <title>About us</title>
+    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/normalize.css"/>
     <!-- fonts awesome -->
-    <link rel="stylesheet" type="text/css" href="/css/all.min.css"/>
+    <link rel="stylesheet" href="/css/all.min.css"/>
     <script src="https://kit.fontawesome.com/66f7f9abfb.js" crossorigin="anonymous"></script>
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,21 +23,29 @@
             <ul class="main-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/signin" > Sign In</a></li>
+                <li><a href="/signup" > Sign Up</a></li>
                 <li><a href="/services" > Services</a></li>
-                <li><a href="/aboutus" > About Us</a></li>
                 <li><a href="/contactus" > Contact Us</a></li>
             </ul>
     </div>
     </div>
 <!-- End Header -->
 <!-- Start landing-->
-    <div class="register">
-    <div class="container">
-        <div class="texting"> <h1 > Sign Up as: </h1> <hr></div>
-        <div class="dots dots-up"></div> 
-    <div class="dots dots-down"></div>
-        <br> <br>  <h3 class="main-title"><a href="/signup/serviceprovider/caregiver"> Care giver  </a></h3>
-            <h3 class="main-title"><a href="/signup/serviceprovider/daycare"> Day Care</a></h3>
+
+    <div class="landing">
+        <div class="container">
+        <div class="text">
+        <br> <br>   <br> <br>  <br> <br> <h1>Who are we?</h1> <br>
+            <p>We are a group of<strong> BIS </strong> graduates, passionate about improving people`s lives, especially people with special needs, by facilitating the way they live and participate in our day-to-day activities. This objective will be achieved through the services we provide. These services are mainly concentrated in 2 branches service providers and events & activities.</p>
+        </div>
+        <div class="image">
+            <img src="/imgs/landing.png" alt="" />
+        </div>
+        </div>
+        </div>
+
+
+        
             
         
     </div>   
