--- a/views/registerv.ejs
+++ b/views/registerv.ejs
@@ -27,11 +27,11 @@
         <div class="container">
             <a href="#" class="logo"><img src="/imgs/logoo.png"> Warm Hands</a>
             <ul class="main-nav">
-                <li><a href="Home.html" target="_blank">Home</a></li>
-                <li><a href="Signin .html" target="_blank"> Sign In</a></li>
-                <li><a href="services.html" target="_blank"> Services</a></li>
-                <li><a href="aboutus.html" target="_blank"> About Us</a></li>
-                <li><a href="contact us.html" target="_blank"> Contact Us</a></li>
+                <li><a href="/" >Home</a></li>
+                <li><a href="/signin" > Sign In</a></li>
+                <li><a href="/services" > Services</a></li>
+                <li><a href="/aboutus" > About Us</a></li>
+                <li><a href="/contactus" > Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="form-control1 ">
                     <label for="docs"><b> Upload relevant documents:&nbsp;&nbsp; <a class="joinn" href="FAQs.html"
-                                target="_blank"> Documents needed</a> </b></label> <br> <br>
+                                > Documents needed</a> </b></label> <br> <br>
                     <input type="file" id="docs" name="docs" multiple>
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
