--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -25,11 +25,11 @@
         <div class="container">
             <a href="#" class="logo"><img src="imgs/logoo.png"> Warm Hands</a>
             <ul class="main-nav">
-                <li><a href="Home.html" target="_blank">Home</a></li>
-                <li><a href="Signup.html" target="_blank"> Sign up</a></li>
-                <li><a href="services.html" target="_blank"> Services</a></li>
-                <li><a href="aboutus.html" target="_blank"> About Us</a></li>
-                <li><a href="contact us.html" target="_blank"> Contact Us</a></li>
+                <li><a href="/" >Home</a></li>
+                <li><a href="/signup" > Sign up</a></li>
+                <li><a href="/services" > Services</a></li>
+                <li><a href="/aboutus" > About Us</a></li>
+                <li><a href="/contactus" > Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -70,7 +70,7 @@
                 <input class="buttonn" type="reset">
                 <div class="in">
                     <br> <br>
-                    <p> Don't have an account? <a class="linkss" href="Signup.html">Sign up</a></p>
+                    <p> Don't have an account? <a class="linkss" href="/signup">Sign up</a></p>
                 </div>
         </div>
         </form>
