--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,11 +22,11 @@
     <div class="container">
         <a href="#" class="logo"><img src="/imgs/logoo.png">  Warm Hands</a>
             <ul class="main-nav">
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Signin .html" target="_blank"> Sign In</a></li>
-                <li><a href="services.html" target="_blank"> Services</a></li>
-                <li><a href="aboutus.html" target="_blank"> About Us</a></li>
-                <li><a href="contact us.html" target="_blank"> Contact Us</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/signin" > Sign In</a></li>
+                <li><a href="/services" > Services</a></li>
+                <li><a href="/aboutus" > About Us</a></li>
+                <li><a href="/contactus" > Contact Us</a></li>
             </ul>
     </div>
     </div>
