--- a/views/patienthome.ejs
+++ b/views/patienthome.ejs
@@ -38,13 +38,13 @@
                         <ul class="links">
                             <li><a href="#articles"><i class="fa-regular fa-pen-to-square"></i> Blogs</a></li>
                             <li><a href="#events"><i class="fa-regular fa-calendar-days"></i> Events</a></li>
-                            <li><a href="services.html" target="_blank"><i class="fa-solid fa-handshake-angle"></i>
+                            <li><a href="/services" ><i class="fa-solid fa-handshake-angle"></i>
                                     Services</a></li>
-                            <li><a href="aboutus.html" target="_blank"><i class="fa-regular fa-address-card"></i> About
+                            <li><a href="/aboutus" ><i class="fa-regular fa-address-card"></i> About
                                     us</a></li>
-                            <li><a href="FAQs.html" target="_blank"><i class="fa-solid fa-clipboard-question"></i>
+                            <li><a href="FAQs.html" ><i class="fa-solid fa-clipboard-question"></i>
                                     FAQs</a></li>
-                            <li><a href="contact us.html" target="_blank"><i class="far fa-comments fa-fw"></i> Contact
+                            <li><a href="/contactus" ><i class="far fa-comments fa-fw"></i> Contact
                                     Us</a></li>
 
 
@@ -1101,9 +1101,9 @@
             </div>
             <div class="box">
                 <ul class="links">
-                    <li><a href="Signup.html" target="_blank">Sign up</a></li>
-                    <li><a href="Signin .html" target="_blank">Sign in</a></li>
-                    <li><a href="aboutus.html" target="_blank">About us</a></li>
+                    <li><a href="/signup" >Sign up</a></li>
+                    <li><a href="/signin" >Sign in</a></li>
+                    <li><a href="/aboutus" >About us</a></li>
                     <li><a href="#">FAQs</a></li>
 
                 </ul>
