--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -33,15 +33,15 @@
 
                         <ul class="links">
 
-                            <li><a href="services.html" target="_blank"><i class="fa-solid fa-handshake-angle"></i>
+                            <li><a href="/services" ><i class="fa-solid fa-handshake-angle"></i>
                                     Services</a></li>
-                            <li><a href="aboutus.html" target="_blank"><i class="fa-regular fa-address-card"></i> About
+                            <li><a href="/aboutus" ><i class="fa-regular fa-address-card"></i> About
                                     us</a></li>
-                            <li><a href="FAQs.html" target="_blank"><i class="fa-solid fa-clipboard-question"></i>
+                            <li><a href="FAQs.html" ><i class="fa-solid fa-clipboard-question"></i>
                                     FAQs</a></li>
-                            <li><a href="contact us.html" target="_blank"><i class="far fa-comments fa-fw"></i> Contact
+                            <li><a href="/contactus" ><i class="far fa-comments fa-fw"></i> Contact
                                     Us</a></li>
-                            <li><a href="terms.html" target="_blank"><i class="fa-solid fa-file-shield"></i></i> Terms
+                            <li><a href="terms.html" ><i class="fa-solid fa-file-shield"></i></i> Terms
                                     and conditions</a></li>
 
 
@@ -64,7 +64,7 @@
             <div class="text">
                 <h1>Welcome, To Warm Hands</h1>
                 <p>You don't just help, you INSPIRE, <br> Thank you for making difference everyday.</p><br><br><br>
-                <a href="edit.html" target="_blank" class="btn">Edit</a> <br>
+                <a href="edit.html"  class="btn">Edit</a> <br>
                 <a href="" class="btn">Delete account</a> <br>
             </div>
             <div class="image">
@@ -150,9 +150,9 @@
             </div>
             <div class="box">
                 <ul class="links">
-                    <li><a href="Signup.html" target="_blank">Sign up</a></li>
-                    <li><a href="Signin .html" target="_blank">Sign in</a></li>
-                    <li><a href="aboutus.html" target="_blank">About us</a></li>
+                    <li><a href="/signup" >Sign up</a></li>
+                    <li><a href="/signin" >Sign in</a></li>
+                    <li><a href="/aboutus" >About us</a></li>
                     <li><a href="#">FAQs</a></li>
 
                 </ul>
